ERP-Simulator-Server-End/nohup.out
Traceback (most recent call last):
  File "main.py", line 6, in <module>
    import ServerSystem
  File "/mnt/c/Users/Zhiquan.Wang/Documents/SourceCode/Git-Repository/ERP-Sandbox-Simulator-Alpha/ERP-Simulator-Server-End/ServerSystem.py", line 6, in <module>
    import ServerNetwork
  File "/mnt/c/Users/Zhiquan.Wang/Documents/SourceCode/Git-Repository/ERP-Sandbox-Simulator-Alpha/ERP-Simulator-Server-End/ServerNetwork.py", line 9, in <module>
    import ServiceManager
  File "/mnt/c/Users/Zhiquan.Wang/Documents/SourceCode/Git-Repository/ERP-Sandbox-Simulator-Alpha/ERP-Simulator-Server-End/ServiceManager.py", line 8, in <module>
    from GameInfoPackage.GameInfo import *
  File "/mnt/c/Users/Zhiquan.Wang/Documents/SourceCode/Git-Repository/ERP-Sandbox-Simulator-Alpha/ERP-Simulator-Server-End/GameInfoPackage/GameInfo.py", line 29
    def set_name(self, _name):
      ^
IndentationError: expected an indented block
